--- a/web/index.html
+++ b/web/index.html
@@ -32,8 +32,175 @@
 
   <title>marimuthu_portfolio</title>
   <link rel="manifest" href="manifest.json">
+  <script src="flutter.js"></script>
+  <script src="custom_flutter_loader.js"></script>
 </head>
 <body>
+<script>
+  // Define serviceWorkerVersion correctly
+<!--    var serviceWorkerVersion = "{{flutter_service_worker_version}}";-->
+  var serviceWorkerVersion = "1.0.2";
+</script>
+<script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', function () {
+      // Register the service worker using the updated variable
+      navigator.serviceWorker.register('flutter_service_worker.js?v=' + serviceWorkerVersion)
+        .then(function(registration) {
+          console.log('ServiceWorker registration successful with scope: ', registration.scope);
+        }).catch(function(error) {
+          console.log('ServiceWorker registration failed: ', error);
+        });
+    });
+  }
+</script>
+<script>
+  (function () {
+    var baseUri = (function () {
+      var uri = document.baseURI;
+<!--        console.log('Base URI:', uri);-->
+      return uri.endsWith('/') ? uri : uri + '/';
+    })();
+    var script = document.createElement('script');
+    script.src = baseUri + 'flutter.js';
+    script.onload = function () {
+      console.log('flutter.js loaded successfully');
+      if (window.flutterLoader) {
+        window.flutterLoader.load({
+          baseUri: baseUri
+        });
+      } else {
+        console.error('flutterLoader is not defined.');
+      }
+    };
+    script.onerror = function() {
+      console.error('Failed to load flutter.js');
+    };
+    document.body.appendChild(script);
+  })();
+</script>
+<script>
+  window.addEventListener('flutter-first-frame', function () {
+    // Remove the splash screen after the first frame is rendered
+    var loader = document.getElementById('loader');
+    if (loader) {
+      loader.remove();
+    }
+  });
+</script>
   <script src="flutter_bootstrap.js" async></script>
+
+<style>
+  <!--    body {-->
+  <!--            margin: 0;-->
+  <!--            padding: 0;-->
+  <!--            font-family: sans-serif;-->
+  <!--            background-color: #f0f0f0;-->
+  <!--            display: flex;-->
+  <!--            justify-content: center;-->
+  <!--            align-items: center;-->
+  <!--            height: 100vh;-->
+  <!--        }-->
+
+  body {
+      margin: 0;
+      padding: 0;
+      font-family: sans-serif;
+      background-color: #000000; /* Black color */
+      color: #ffffff; /* Optional: Change text color to white for better visibility */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+  }
+
+          .loading-container {
+              width: 200px;
+              height: 200px;
+              border-radius: 50%;
+              border: 10px solid #ddd;
+              position: relative;
+          }
+
+          .loading-circle {
+              width: 100%;
+              height: 100%;
+              border-radius: 50%;
+              clip-path: circle(at 50% 0%, 45%);
+              position: absolute;
+              animation: rotate 0s linear infinite;
+          }
+
+          .loading-circle:nth-child(2) {
+              clip-path: circle(at 50% 100%, 45%);
+              animation-delay: 1s;
+          }
+
+          .loading-circle:nth-child(3) {
+              clip-path: circle(at 0% 50%, 45%);
+              animation-delay: 2s;
+          }
+
+          @keyframes rotate {
+              from { transform: rotate(0deg); }
+              to { transform: rotate(360deg); }
+          }
+
+          .loading-text {
+              position: absolute;
+              top: 50%;
+              left: 50%;
+              transform: translate(-50%, -50%);
+              font-size: 24px;
+              color: white;
+              text-align: center;
+          }
+
+          .loading-text span {
+              display: inline-block;
+              animation: dots 1.5s ease-in-out infinite alternate;
+          }
+
+          .loading-text span:nth-child(2) {
+              animation-delay: 0.5s;
+          }
+
+          .loading-text span:nth-child(3) {
+              animation-delay: 1s;
+          }
+
+          @keyframes dots {
+              0%, 80% { opacity: 0; }
+              100% { opacity: 1; }
+          }
+
+
+  .loading-text-color {
+    color: white;
+  }
+
+  .loading-text-dot {
+    color: white;
+  }
+</style>
+
+
+<div id="loader">
+  <!-- You can put your custom loading screen here -->
+  <!--    <p>Globe Web Application Loading...</p>-->
+  <div class="loading-container">
+    <div class="loading-circle"></div>
+    <div class="loading-circle"></div>
+    <div class="loading-circle"></div>
+  </div>
+  <div class="loading-text">
+    <div class="loading-text-color" >Marimuthu Dev </div>
+    <span class="loading-text-dot" >.</span>
+    <span class="loading-text-dot">.</span>
+    <span class="loading-text-dot">.</span>
+  </div>
+</div>
+
+
 </body>
 </html>
