loading container updated

--- a/web/index.html
+++ b/web/index.html
@@ -118,7 +118,7 @@
               width: 200px;
               height: 200px;
               border-radius: 50%;
-              border: 10px solid #ddd;
+              border: 10px solid #90ee90;
               position: relative;
           }
 
