--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
 <script>
   // Define serviceWorkerVersion correctly
-<!--    var serviceWorkerVersion = ""3344735785"";-->
+<!--    var serviceWorkerVersion = ""86281198"";-->
   var serviceWorkerVersion = "1.0.2";
 </script>
 <script>
@@ -118,7 +118,7 @@
               width: 200px;
               height: 200px;
               border-radius: 50%;
-              border: 10px solid #ddd;
+              border: 10px solid #90ee90;
               position: relative;
           }
 
