updated bg image

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
 <script>
   // Define serviceWorkerVersion correctly
-<!--    var serviceWorkerVersion = ""4277112429"";-->
+<!--    var serviceWorkerVersion = ""270065601"";-->
   var serviceWorkerVersion = "1.0.5";
 </script>
 <script>
@@ -188,6 +188,13 @@
 <!--  border-radius: 4px;-->
   padding: 5px;
   width: 150px;
+}
+
+  body {
+  background-image: url('images/bg_image.webp');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 </style>
