--- a/web/index.html
+++ b/web/index.html
@@ -112,7 +112,7 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background-image: url('images/bg_image.webp');
+<!--      background-image: url('images/bg_image.webp');-->
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
