--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
 <script>
   // Define serviceWorkerVersion correctly
-<!--    var serviceWorkerVersion = ""3551532039"";-->
+<!--    var serviceWorkerVersion = ""3641954465"";-->
   var serviceWorkerVersion = "1.0.5";
 </script>
 <script>
@@ -112,7 +112,7 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background-image: url('images/bg_image.webp');
+<!--      background-image: url('images/bg_image.webp');-->
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
