--- a/index.html
+++ b/index.html
@@ -1,49 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <base href="/">
-    <meta charset="UTF-8">
-    <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-    <meta name="description" content="My portfolio developed in love with Flutter.">
+  <!--
+    If you are serving your web app in a path other than the root, change the
+    href value below to reflect the base path you are serving from.
 
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="marimuthu_portfolio">
-    <link rel="apple-touch-icon" href="icons/Icon-192.png">
+    The path provided below has to start and end with a slash "/" in order for
+    it to work correctly.
 
-    <link rel="icon" type="image/png" href="favicon.png"/>
-    <title>marimuthu_portfolio</title>
-    <link rel="manifest" href="manifest.json">
+    For more details:
+    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
 
-    <script src="flutter.js" defer></script>
-    <script src="flutter_bootstrap.js" defer></script>
-    <script src="custom_flutter_loader.js"></script>
+    This is a placeholder for base href that will be replaced by the value of
+    the `--base-href` argument provided to `flutter build`.
+  -->
+  <base href="/">
+  <meta charset="UTF-8">
+  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
+  <meta name="description" content="My portfolio developed in love with flutter.">
 
-    <style>
-        body {
-          margin: 0;
-          padding: 0;
-          font-family: sans-serif;
-          background-color: #ffffff;
-          color: #000000;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          height: 100vh;
-          background-size: cover;
-          background-position: center;
-          background-repeat: no-repeat;
-        }
+  <!-- iOS meta tags & icons -->
+<!--  <meta name="apple-mobile-web-app-capable" content="yes">-->
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="marimuthu_portfolio">
+  <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-        .loading-container {
-          width: 200px;
-          height: 200px;
-          border-radius: 50%;
-          border: 10px solid #00ff0080;
-          position: relative;
-        }
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="favicon.png"/>
 
-        .loading-circle {
+  <title>marimuthu_portfolio</title>
+  <link rel="manifest" href="manifest.json">
+
+  <script src="flutter.js" defer></script>
+  <script src="flutter_bootstrap.js" defer></script>
+  <script src="custom_flutter_loader.js"></script>
+
+  <style>
+    <!--    body {-->
+    <!--            margin: 0;-->
+    <!--            padding: 0;-->
+    <!--            font-family: sans-serif;-->
+    <!--            background-color: #f0f0f0;-->
+    <!--            display: flex;-->
+    <!--            justify-content: center;-->
+    <!--            align-items: center;-->
+    <!--            height: 100vh;-->
+    <!--        }-->
+
+    body {
+        margin: 0;
+        padding: 0;
+        font-family: sans-serif;
+        background-color: #ffffff; /* Black color */
+        color: #000000; /* Optional: Change text color to white for better visibility */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+  <!--      background-image: url('images/bg_image.webp');-->
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    }
+
+            .loading-container {
+                width: 200px;
+                height: 200px;
+                border-radius: 50%;
+                border: 10px solid #00ff0080;
+                position: relative;
+            }
+
+            .loading-circle {
                 width: 100%;
                 height: 100%;
                 border-radius: 0%;
@@ -62,23 +91,22 @@
                 animation-delay: 2s;
             }
 
-        @keyframes rotate {
-          from { transform: rotate(0deg); }
-          to { transform: rotate(360deg); }
-        }
+            @keyframes rotate {
+                from { transform: rotate(0deg); }
+                to { transform: rotate(360deg); }
+            }
 
-        .loading-text {
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
-          font-size: 24px;
-          color: red;
-          text-align: center;
-        }
+            .loading-text {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                font-size: 24px;
+                color: red;
+                text-align: center;
+            }
 
-
-        .loading-text span {
+            .loading-text span {
                 display: inline-block;
                 animation: dots 1.5s ease-in-out infinite alternate;
             }
@@ -106,57 +134,96 @@
       size:50px;
     }
 
-            img {
+    img {
   <!--  border: 1px solid #ddd;-->
   <!--  border-radius: 4px;-->
     padding: 2px;
     width: 150px;
   }
 
-    </style>
+  <!--  body {-->
+  <!--  background-image: url('images/bg_image.webp');-->
+  <!--  background-size: cover;-->
+  <!--  background-position: center;-->
+  <!--  background-repeat: no-repeat;-->
+  <!--}-->
+
+  </style>
+
 </head>
+
 <body>
 
-<!--<script>-->
-<!--    var serviceWorkerVersion = "1.0.15";-->
-
-<!--    if ('serviceWorker' in navigator) {-->
-<!--      window.addEventListener('load', function () {-->
-<!--        navigator.serviceWorker.register('flutter_service_worker.js?v=' + serviceWorkerVersion)-->
-<!--          .then(function(registration) {-->
-<!--            console.log('ServiceWorker registration successful with scope:', registration.scope);-->
-<!--          }).catch(function(error) {-->
-<!--            console.log('ServiceWorker registration failed:', error);-->
-<!--          });-->
-<!--      });-->
-<!--    }-->
-<!--</script>-->
-
 <script>
-    window.addEventListener('flutter-first-frame', function () {
-      var loader = document.getElementById('loader');
-      if (loader) {
-        loader.remove();
-      }
+  // Define serviceWorkerVersion correctly
+<!--    var serviceWorkerVersion = ""2233218734"";-->
+  var serviceWorkerVersion = "1.0.17";
+</script>
+<script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', function () {
+      // Register the service worker using the updated variable
+      navigator.serviceWorker.register('flutter_service_worker.js?v=' + serviceWorkerVersion)
+        .then(function(registration) {
+          console.log('ServiceWorker registration successful with scope: ', registration.scope);
+        }).catch(function(error) {
+          console.log('ServiceWorker registration failed: ', error);
+        });
     });
+  }
+</script>
+<script>
+  (function () {
+    var baseUri = (function () {
+      var uri = document.baseURI;
+<!--        console.log('Base URI:', uri);-->
+      return uri.endsWith('/') ? uri : uri + '/';
+    })();
+    var script = document.createElement('script');
+    script.src = baseUri + 'flutter.js';
+    script.onload = function () {
+      console.log('flutter.js loaded successfully');
+      if (window.flutterLoader) {
+        window.flutterLoader.load({
+          baseUri: baseUri
+        });
+      } else {
+        console.error('flutterLoader is not defined.');
+      }
+    };
+    script.onerror = function() {
+      console.error('Failed to load flutter.js');
+    };
+    document.body.appendChild(script);
+  })();
+</script>
+<script>
+  window.addEventListener('flutter-first-frame', function () {
+    // Remove the splash screen after the first frame is rendered
+    var loader = document.getElementById('loader');
+    if (loader) {
+      loader.remove();
+    }
+  });
 </script>
 
 <div id="loader">
-    <!-- You can put your custom loading screen here -->
-    <!--    <p>Globe Web Application Loading...</p>-->
-    <div class="loading-container" style="background-color: rgba(255, 255, 255, 0.5);">
-        <div class="loading-circle"></div>
-        <div class="loading-circle"></div>
-        <div class="loading-circle"></div>
-    </div>
-    <div class="loading-text">
-        <img src="images/flutter_bird_logo.png" alt="fluter dev">
-        <div class="loading-text-color" >Marimuthu Dev</div>
-        <span class="loading-text-dot" >.</span>
-        <span class="loading-text-dot">.</span>
-        <span class="loading-text-dot">.</span>
-    </div>
+  <!-- You can put your custom loading screen here -->
+  <!--    <p>Globe Web Application Loading...</p>-->
+  <div class="loading-container" style="background-color: rgba(255, 255, 255, 0.5);">
+    <div class="loading-circle"></div>
+    <div class="loading-circle"></div>
+    <div class="loading-circle"></div>
+  </div>
+  <div class="loading-text">
+    <img src="images/flutter_bird_logo.png" alt="fluter dev">
+    <div class="loading-text-color" >Marimuthu Dev</div>
+    <span class="loading-text-dot" >.</span>
+    <span class="loading-text-dot">.</span>
+    <span class="loading-text-dot">.</span>
+  </div>
 </div>
+
 
 </body>
 </html>
